<resources>
    <string name="app_name">Formulario</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Formulario</string>
    <string name="Nombre">Nombre:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="contraseña2">Repetir contraseña:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="Macho">Masculino</string>
    <string name="Hembra">Femenino</string>
    <string name="hobbie1">Leer</string>
    <string name="hobbie2">Correr</string>
    <string name="hobbie3">Cantar</string>
    <string name="hobbie4">Bailar</string>
    <string name="sex">Sexo:</string>
    <string name="gethobbie">Seleccione un hobbie:</string>
    <string name="birthdate">Fecha de Nacimiento:</string>
    <string name="date">Lugar de Nacimiento:</string>
    <string name="fecha">Calendario</string>
</resources>
